--- a/map.html
+++ b/map.html
@@ -10,6 +10,7 @@
 
 <body>
 
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" />
     <style>
         .leaflet-popup-content-wrapper,
         .leaflet-popup-tip {
@@ -21,8 +22,8 @@
             font-family: "Work Sans", sans-serif;
         }
 
-        .leaflet-popup-content p {
-            margin: 5px 0 5px 0;
+        .leaflet-popup-content p, .leaflet-popup-content h3  {
+            margin: 0px 0;
         }
 
         .nombre_central {
@@ -40,7 +41,7 @@
     </div>
 
     <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js" defer></script>
-    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" />
+    
 
 
 
