--- a/map.html
+++ b/map.html
@@ -15,13 +15,13 @@
     <link rel="preload" href="css/styles.css" as="style" onload="this.rel='stylesheet'" />
     <div class="mapcontainer">
         <div id="ukraine_nuclear_map" style="width: 100%; height: 550px;"></div>
-        <p><img src="img/ucrania-ocupada.png" style="vertical-align:middle; height: 15px" /> Ucrania ocupada</p>
+        <p><img src="img/ucrania-ocupada.png" style="vertical-align:middle; height: 11px; border: 2.5px solid rgb(169,102,100)" /> Ucrania ocupada</p>
         <p class="mapfooter"><small>© 2022 - Greenpeace</small></p>
     </div>
     <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js" defer></script>
     <script src="js/scripts.js" defer></script>
     <!-- MAPA DE UCRANIA NUCLEAR -->
-    
+
 </body>
 
 </html>
